
  * Add check in initramfs that the root FS being used is for the correct
    architecture.
  * Fix Raspberry Pi Model 2B support in generate-cluster-id.
  * remount-root script now handles unmounting cleanly.
  * Add more logging to U-Boot boot script.
  * Change default U-Boot boot script name to `boot.scr.uimg`.
  * Remove /usr prefix for set-cluster-node-hostname.

 -- Will Ross <paxswill@paxswill.com>  Mon, 08 Feb 2021 11:58:59 -0500

cluster-netboot (0.1.7) bullseye; urgency=medium

  * Add an intermediate initramfs step for populating the instance /var.
  * Remove /etc/hostname in postinst to ensure it can be set at boot.
  * Fix Raspberry Pi firmware files not syncing.
  * Rewrite z-cluster-netboot kernel postinst hook in Python.
  * Ensure /boot/firmware exists, but is read-only.
  * Fix DTB pattern for OrangePi boards.
  * Fix Raspberry Pi kernel command line console definitions.
  * Add a board-specific uEnv file for U-Boot netbooting.
  * Fix remount-root script to find the right NFS server.
  * Wait for a network device to be available before setting the hostname in
    initramfs.

 -- Will Ross <paxswill@paxswill.com>  Sat, 06 Feb 2021 18:06:30 -0500

cluster-netboot (0.1.6) bullseye; urgency=medium

  * The U-Boot kernel hook only recreates the script image as needed now.
  * Add systemd drop-in to minimize+fix waiting for network.
  * Add systemd drop-in to fix machine-id saving.
  * Add permanent symlink for /etc/mtap to /proc/self/mounts
  * Mask apt daily timers.

 -- Will Ross <paxswill@paxswill.com>  Fri, 05 Feb 2021 14:53:31 -0500

cluster-netboot (0.1.5) bullseye; urgency=medium

  * Use systemd-networkd to manage DHCP after initial boot.
  * Improve error handling in kernel and initramfs hook scripts when this
    package has been removed.
  * Add triggers for Raspberry Pi and U-Boot firmware updates.
  * Activate trigger to update-initramfs.
  * Link generated mount unit files to systemd targets.