@@ -7,3 +7,8 @@ debian/*.substvars
 debian/debhelper-build-stamp
 debian/files
 debian/cluster-netboot
+# Ignore manpages created from XML files
+man/*
+!man/*.xml
+# This file is an "alias" manpage
+!man/set-cluster-node-hostname.8
