@@ -1,0 +1,2 @@
+man/generate-cluster-id.1
+man/set-cluster-node-hostname.8
