@@ -1,0 +1,1 @@
+.so man1/generate-cluster-id.1
